@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

class DBHelper{
insertModule()
insertLecture()
insertStep()
clearDB()
checkModuleExistsById()
saveModuleToDB()
saveUserToDB()
}
class HttpHelper{
getContent()
readStream()
}
class JsonHelper{
readModule()
readLecture()
readStepInLecture()
readStep()
}

class Module{
int id;
String title;
String description
String createAt;
String updateAt;
Status status;
List<Lesson> lectureList;
int imageResource;
int progressStatus;
}

class Lesson {
int id;
int moduleId;
String title;
List<Step> stepList;
Status status;
}
class Step {
int id;
int lessonId;
String title;
List<Content> contentList;
Status status;
}
class Content{
int id;
String type;
String text;
}
class Status{
    int id;
    String status;
}

class AutActivity
class LessonPage
class ListAdapter
class MainActivity
class ModuleAdapter
class ProfileActivity

@enduml
